[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/city_hub.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/Backpack.tscn" id="2"]

[node name="CityHub" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
color = Color(0.113725, 0.109804, 0.25098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Map" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Map"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Map/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="CanvasLayer/Map/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Digital City Hub"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/Map/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click a district to help Digital City!"
horizontal_alignment = 1

[node name="MapGrid" type="GridContainer" parent="CanvasLayer/Map/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 250)

[node name="SafetyButton" type="Button" parent="CanvasLayer/Map/MarginContainer/VBoxContainer/MapGrid"]
layout_mode = 2
text = "Safety District"

[node name="RespectButton" type="Button" parent="CanvasLayer/Map/MarginContainer/VBoxContainer/MapGrid"]
layout_mode = 2
text = "Respect Plaza"

[node name="InfoButton" type="Button" parent="CanvasLayer/Map/MarginContainer/VBoxContainer/MapGrid"]
layout_mode = 2
text = "Info Alley"

[node name="CopyrightButton" type="Button" parent="CanvasLayer/Map/MarginContainer/VBoxContainer/MapGrid"]
layout_mode = 2
text = "Copyright Court"

[node name="BalanceButton" type="Button" parent="CanvasLayer/Map/MarginContainer/VBoxContainer/MapGrid"]
layout_mode = 2
text = "Balance Park"

[node name="BackpackButton" type="Button" parent="CanvasLayer/Map/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Toggle Backpack"

[node name="Backpack" parent="CanvasLayer" instance=ExtResource("2")]
